--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
-/* Midnight Glitch Explorer – pure cyberpunk darkness */
+body {
+  margin: 0;
+  font-family: 'Courier New', monospace, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #000;
+  color: #00ffff;
+}
