--- a/src/App.css
+++ b/src/App.css
@@ -18,9 +18,11 @@
 }
 
 .subtitle {
-  font-size: 1.8rem;
-  opacity: 0.9;
-  margin-top: 1rem;
+  font-size: 1.6rem;
+  opacity: 0.85;
+  margin-top: 0.8rem;
+  letter-spacing: 0.25em;
+  animation: glitch 0.6s linear infinite;
 }
 
 .card {
@@ -52,7 +54,7 @@
   margin-top: 20vh;
 }
 
-/* GLITCH MAGIC */
+/* GLITCH & ANIMATIONS */
 @keyframes glitch {
   0% { text-shadow: 3px 3px #ff00ff, -3px -3px #00ffff; transform: translate(0); }
   20% { text-shadow: -3px -3px #ff00ff, 3px 3px #00ffff; transform: translate(-3px,-3px); }
